# trading-engine

./: .gitignore  CMakeLists.txt  README.md  benchmark.sh  vcpkg.json
include/common/: Logger.hpp  ObjectPool.hpp  RingBuffer.hpp  Types.hpp  Utils.hpp
include/execution/: CoinbaseAuth.hpp  ExecutionGateway.hpp
include/feed_handler/: CoinbaseLive.hpp  CoinbaseUDP.hpp  FeedHandler.hpp
include/network/: DPDKPoller.hpp
include/simulation/: MatchingEngine.hpp
include/strategy/: OrderBook.hpp  RiskManager.hpp  StrategyEngine.hpp
private/: hft-key.pem
scripts/: connect_aws.sh  run_hybrid_benchmark.sh  setup_amazon_linux.sh  setup_aws_network.sh  test_suite.sh
src/: main.cpp  replay_engine.cpp  test_connect.cpp
src/execution/: CoinbaseAuth.cpp  ExecutionGateway.cpp
src/feed_handler/: FeedHandler.cpp
src/network/: DPDKPoller.cpp
src/strategy/: StrategyEngine.cpp
tests/: integration_feed.cpp  test_auth.cpp  test_risk_manager.cpp
tools/: analyze.py  analyze_pnl.py  convert_key.py  converter  converter.cpp  optimize.py  udp_gen.py  verify_auth.py
